[tool.poetry]
name = "ironman-reminder"
version = "0.1.0"
description = ""
authors = ["c8763yee <rrrrr4413@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.10.5"
pydantic = "^2.9.0"
strenum = "^0.4.15"
tabulate = "^0.9.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pylint = "^3.2.7"
ipython = "^8.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
